<resources>
    <string name="app_name">SmartRemote</string>
    <string name="action_settings">设置</string>
    <string name="rc_mainFrag_key">按键</string>
    <string name="rc_mainFrag_gesture">手势</string>
    <string name="rc_mainFrag_kmouse">鼠标</string>
    <string name="rc_mainFrag_speech">声控</string>
    <string name="GetIP">GetIP</string>
    <string name="pingFinish">完成</string>
    <string name="searching">搜索中。。。</string>
    <string name="startsearch">开始搜索</string>
	<string name="research">重新搜索</string>
    <string name="smart_rc">Smart_RC</string>
    <string name="disconnect">未连接</string>
    <string name="loseclient">失去TV端连接!</string>
    <string name="connected">已连接</string>
    <string name="no_found_device">未发现设备</string>
    <string name="remote">按键</string>
    <string name="gesture">手势</string>
    <string name="mouse">鼠标</string>
    <string name="voice_con">声控</string>
    <string name="turnon_wifi">请连接无线网络</string>
    <string name="not_get_dhcp">不能得到DHCP信息</string>
    <string name="retry">重试</string>
    <string name="retry_info">词典未包含该声音</string>
    <string name="speech_volume_too_low">词典未包含该声音</string>
    <string name="speech_press_to_speak">按住 说话</string>
    <string name="speech_release_to_stop">松开 结束</string>
    <string name="speech_recongnizing">声音识别中，请稍后</string>
    <string name="go_on">继续</string>
    <string name="stop">停止</string>
    <string name="cancle">取消</string>
    <string name="speech_voice_recognize_err">语法识别失败，错误 ：</string>
    <string name="not_connecting">设备未连接</string>
    <string name="drawerlisticon">drawerlisticon</string>
    <!--Remote key-->
    <string name="up">UP</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="ok">OK</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="buttonZero">0</string>
    <string name="buttonDot">.</string>
    <string name="Return">Return</string>
    <string name="channel">频道</string>
    <string name="volume">音量</string>
    <string name="volUp">Vol+</string>
    <string name="volDown">Vol-</string>
    <string name="chUp">CH+</string>
    <string name="chDown">CH-</string>
    <string name="home">Home</string>
    <string name="menu">菜单</string>
    <string name="back">Back</string>
    <string name="mute">Mute</string>
    <string name="option">Option</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="power">P-Off</string>
    <string name="source">输入</string>
    <string name="ZOOM">ZOOM</string>
    <string name="EXIT">EXIT</string>
    <string name="SmartTV">SmartTV</string>
    <string name="Time">Time</string>
    <string name="Exit">Exit</string>
    <string name="Android">Android</string>
    <string name="WebBrowser">WebBrowser</string>
    <string name="Previous">Previous</string>
    <string name="TV">TV</string>
    <string name="info">信息</string>
    <string name="HDMI">HDMI</string>
    <string name="VOICE">VOICE</string>
    
    <string name="listviewDes">Listview icon</string>
    <string name="vibrationswitch">震动开关</string>
    <string name="softwareupdate">软件升级</string>
    <string name="exit">退出</string>
    <string name="send">发送</string>
    <string name="delete">删除</string>
    <string name="enter">确定</string>
    <string name="mback">返回</string>
    <string name="infobox_title">提示</string>
    <string name="infobox_content">确定要退出三洋手机遥控器吗?</string>
    <string name="infobox_OK">确认</string>
    <string name="infobox_Cancel">取消</string>
    <string name="devicelist">设备列表</string>
    <string name="inputmethodhint">点击这里可向电视文本框中输入文字</string>
    <string name="softwareinfo">三洋手机遥控器 \n版本 0.0.0.4</string>
    <string name="hello">Hello World, MySlideMenuActivity!</string>


    <string name="dlna_tabhost_picture">图片</string>
    <string name="dlna_tabhost_video">视频</string>
    <string name="dlna_tabhost_music">音乐</string>
    <string name="dlna_render_title">选择推送设备</string>
    <string name="dlna_share_title">分享</string>
    <string name="dlna_title_bar_multiple_select">多选</string>
    <string name="dlna_title_bar_cancel">取消</string>
    <string name="dlna_title_bar_select_all">全选</string>
    <string name="dlna_title_bar_unselect_all">全不选</string>
    <string name="dlna_title_bar_my_phone">我的手机</string>
    <string name="dlna_title_bar_select_count">已选择</string>
    <string name="dlna_frag_pic_btn_album">其他相册</string>
    <string name="dlna_pic_glr_empty">目录为空</string>
    <string name="cont">content</string>
    <string name="title">title</string>
    <string name="time">time</string>
    <string name="dlna_movie_str_err">※未发现SD卡※</string>
    <string name="dlna_movie_format_not_support">文件类型不支持</string>
    <string name="dlna_movie_str_play">播放影片中</string>
    <string name="dlna_media_init_duration">00:00:00</string>
</resources>